--- a/index.html
+++ b/index.html
@@ -1814,6 +1814,59 @@ function dmTimestamp(value){
   const t=new Date(value).getTime();
   return Number.isFinite(t)?t:Number.NEGATIVE_INFINITY;
 }
+function normalizeAllocationPayload(raw){
+  const uniqueStrings=(values)=>{
+    const seen=new Set();
+    const out=[];
+    (values||[]).forEach(val=>{
+      const text=String(val||'').trim();
+      if(!text) return;
+      if(seen.has(text)) return;
+      seen.add(text);
+      out.push(text);
+    });
+    return out;
+  };
+  if(raw && typeof raw==='object' && !Array.isArray(raw)){
+    const label=typeof raw.label==='string'?raw.label:'';
+    const recipients=uniqueStrings(raw.recipients);
+    const tokens=uniqueStrings(raw.tokens);
+    const itemTokens=uniqueStrings(raw.item_tokens);
+    return {
+      label:label.trim(),
+      recipients,
+      tokens,
+      itemTokens,
+      levelsSpent:dmToNullableNumber(raw.levels_spent),
+      levelsGained:dmToNullableNumber(raw.levels_gained),
+      downtimeSpent:dmToNullableNumber(raw.downtime_spent),
+      goldSpent:dmToNullableNumber(raw.gold_spent)
+    };
+  }
+  if(typeof raw==='string'){
+    const label=raw.trim();
+    return {
+      label,
+      recipients:[],
+      tokens:[],
+      itemTokens:[],
+      levelsSpent:null,
+      levelsGained:null,
+      downtimeSpent:null,
+      goldSpent:null
+    };
+  }
+  return {
+    label:'',
+    recipients:[],
+    tokens:[],
+    itemTokens:[],
+    levelsSpent:null,
+    levelsGained:null,
+    downtimeSpent:null,
+    goldSpent:null
+  };
+}
 function buildDmEntries(){
   DM_ENTRIES=[];
   DM_SUMMARY={ runs:0, allocations:0, earnedHours:0, earnedBonus:0, allocatedHours:0, allocatedBonus:0, allocatedCost:0, earnedLevels:0, spentLevels:0, entries:0 };
@@ -1860,6 +1913,7 @@ function buildDmEntries(){
     const season=normalizeSeason('Pre-Season 11');
     const levelsPlus=dmToNullableNumber(entry.levels_plus);
     const levelsMinus=dmToNullableNumber(entry.levels_minus);
+    const allocationDetails=normalizeAllocationPayload(entry.allocation);
     pushEntry({
       type:'run',
       season,
@@ -1874,11 +1928,15 @@ function buildDmEntries(){
       levels_plus:levelsPlus,
       levels_minus:levelsMinus,
       item:entry.item||'',
-      allocation:entry.allocation||''
+      allocation:allocationDetails.label,
+      allocation_detail:allocationDetails,
+      allocation_tokens:allocationDetails.tokens.slice(),
+      allocation_recipients:allocationDetails.recipients.slice(),
+      allocation_item_tokens:allocationDetails.itemTokens.slice()
     });
     if(levelsPlus!=null) DM_SUMMARY.earnedLevels+=levelsPlus;
     if(levelsMinus!=null) DM_SUMMARY.spentLevels+=levelsMinus;
-    const hasAllocation=Boolean((entry.allocation||'').trim());
+    const hasAllocation=Boolean(allocationDetails.label);
     const itemName=String(entry.item||'').trim();
     if(itemName && !hasAllocation){
       DM_PRE_ITEMS.push({
@@ -1894,27 +1952,38 @@ function buildDmEntries(){
     const season=normalizeSeason(seasonLabel);
     const hoursVal=dmToNullableNumber(alloc.hours);
     const bonusVal=dmToNullableNumber(alloc.extra_hours);
-    const levelsPlus=dmToNullableNumber(alloc.levels_plus);
-    const levelsMinus=dmToNullableNumber(alloc.levels_minus);
-    const costVal=dmToNullableNumber(alloc.cost);
-    pushEntry({
+    const baseLevelsPlus=dmToNullableNumber(alloc.levels_plus);
+    const baseLevelsMinus=dmToNullableNumber(alloc.levels_minus);
+    const baseCost=dmToNullableNumber(alloc.cost);
+    const allocationDetails=normalizeAllocationPayload(alloc.allocation);
+    const effectiveLevelsPlus=(allocationDetails.levelsSpent!=null)?allocationDetails.levelsSpent:baseLevelsPlus;
+    const effectiveLevelsMinus=(allocationDetails.levelsGained!=null)?allocationDetails.levelsGained:baseLevelsMinus;
+    const effectiveCost=(allocationDetails.downtimeSpent!=null)?allocationDetails.downtimeSpent:baseCost;
+    const effectiveGold=(allocationDetails.goldSpent!=null)?allocationDetails.goldSpent:null;
+    const entry={
       type:'allocation',
       season,
       date:alloc.date||'',
-      allocation:alloc.allocation||'',
-      cost:costVal,
-      levels_plus:levelsPlus,
-      levels_minus:levelsMinus,
+      allocation:allocationDetails.label,
+      cost:effectiveCost,
+      levels_plus:effectiveLevelsPlus,
+      levels_minus:effectiveLevelsMinus,
       hours:hoursVal,
       extra_hours:bonusVal,
-      location:alloc.location||''
-    });
+      location:alloc.location||'',
+      gp:effectiveGold,
+      allocation_tokens:allocationDetails.tokens.slice(),
+      allocation_recipients:allocationDetails.recipients.slice(),
+      allocation_item_tokens:allocationDetails.itemTokens.slice(),
+      allocation_detail:allocationDetails
+    };
+    pushEntry(entry);
     DM_SUMMARY.allocations+=1;
     if(hoursVal!=null) DM_SUMMARY.allocatedHours+=hoursVal;
     if(bonusVal!=null) DM_SUMMARY.allocatedBonus+=bonusVal;
-    if(costVal!=null) DM_SUMMARY.allocatedCost+=costVal;
-    if(levelsPlus!=null) DM_SUMMARY.spentLevels+=levelsPlus;
-    if(levelsMinus!=null) DM_SUMMARY.earnedLevels+=levelsMinus;
+    if(entry.cost!=null) DM_SUMMARY.allocatedCost+=entry.cost;
+    if(entry.levels_plus!=null) DM_SUMMARY.spentLevels+=entry.levels_plus;
+    if(entry.levels_minus!=null) DM_SUMMARY.earnedLevels+=entry.levels_minus;
   };
   if(Array.isArray(DM_DATA.preS11)){
     DM_DATA.preS11.forEach(preEntry=>addPreEntry(preEntry));
@@ -1964,35 +2033,39 @@ function normalizeMatchToken(value){
   return String(value||'').toLowerCase().replace(/[^a-z0-9]+/g,'');
 }
 
-function parseAllocationRecipients(text){
-  const raw=String(text||'');
-  const idx=raw.toLowerCase().lastIndexOf(' to ');
-  if(idx===-1) return [];
-  let after=raw.slice(idx+4).trim();
-  if(!after) return [];
-  after=after.replace(/[,.;]+$/,'');
-  after=after.replace(/\band\b/gi,',');
-  after=after.replace(/&/g,',');
-  after=after.replace(/\//g,',');
-  const parts=after.split(',').map(part=>part.trim()).filter(Boolean);
-  return parts;
-}
-function extractAllocationItemTokens(text){
-  const raw=String(text||'');
-  if(!raw) return [];
-  const idx=raw.toLowerCase().lastIndexOf(' to ');
-  const before=idx===-1?raw:raw.slice(0, idx);
-  const candidates=before.split(/[+,&/]/).map(part=>normalizeMatchToken(part));
-  const tokens=new Set();
-  candidates.forEach(token=>{
-    if(!token) return;
-    if(token.length<4) return;
-    if(!/[a-z]/.test(token)) return;
-    if(/^(?:level|levels|hours|extra|bonus|dtd|gp)$/.test(token)) return;
-    if(/^\d/.test(token)) return;
-    tokens.add(token);
-  });
-  return Array.from(tokens);
+function extractAllocationItemTokens(source){
+  if(!source) return [];
+  if(source && typeof source==='object' && Array.isArray(source.allocation_item_tokens)){
+    return source.allocation_item_tokens.slice();
+  }
+  let details=null;
+  if(source && typeof source==='object'){
+    if(source.allocation_detail){
+      details=source.allocation_detail;
+    }else if(source.allocation){
+      details=normalizeAllocationPayload(source.allocation);
+    }
+  }else if(typeof source==='string'){
+    details=normalizeAllocationPayload(source);
+  }
+  if(!details){
+    return [];
+  }
+  if(Array.isArray(details.itemTokens) && details.itemTokens.length){
+    return details.itemTokens.slice();
+  }
+  if(Array.isArray(details.tokens) && details.tokens.length){
+    const tokens=new Set();
+    details.tokens.forEach(token=>{
+      if(typeof token!=='string') return;
+      if(token.toLowerCase().startsWith('item:')){
+        const cleaned=token.slice(5).trim();
+        if(cleaned) tokens.add(cleaned);
+      }
+    });
+    if(tokens.size) return Array.from(tokens);
+  }
+  return [];
 }
 function extractContentTokens(values){
   const tokens=new Set();
@@ -2025,7 +2098,7 @@ function buildAllocationItemSeasonIndex(entries){
     if(!entry || entry.type!=='allocation') return;
     const season=entry.season||'';
     if(!season) return;
-    extractAllocationItemTokens(entry.allocation).forEach(token=>{
+    extractAllocationItemTokens(entry).forEach(token=>{
       if(!map.has(token)) map.set(token,new Set());
       map.get(token).add(season);
     });
@@ -2197,10 +2270,15 @@ function rebuildDmRewardLinks(){
     if(!allocationText) return;
     const normalizedText=allocationText.toLowerCase();
     const normalizedCompact=normalizeMatchToken(allocationText);
-    const allocationTokens=extractAllocationItemTokens(allocationText);
+    const allocationTokens=(entry && Array.isArray(entry.allocation_item_tokens) && entry.allocation_item_tokens.length)
+      ? entry.allocation_item_tokens.slice()
+      : extractAllocationItemTokens(entry);
     const allocationTokenSet=new Set(allocationTokens);
     const allocationWordSet=new Set(normalizedText.split(/[^a-z0-9]+/).map(part=>normalizeMatchToken(part)).filter(token=>token && token.length>=3));
-    const recipients=parseAllocationRecipients(allocationText);
+    const allocationDetails=entry.allocation_detail||normalizeAllocationPayload(entry.allocation);
+    const recipients=(Array.isArray(entry.allocation_recipients) && entry.allocation_recipients.length)
+      ? entry.allocation_recipients.slice()
+      : Array.isArray(allocationDetails.recipients)?allocationDetails.recipients.slice():[];
     const matchedKeys=new Set();
 
     if(recipients.length){
