--- a/index.html
+++ b/index.html
@@ -17,21 +17,25 @@
   --danger:#dc2626;
 }
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--ink);background:var(--bg);scrollbar-gutter:stable}
-.container{max-width:1200px;margin:28px auto 80px;padding:0 20px 120px}
-.sheet-card{position:relative;background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow1);display:flex;flex-direction:column;min-height:460px;max-height:calc(100vh - 72px);overflow:hidden}
-.sheet-card-header{padding:20px 20px 18px;display:flex;flex-direction:column;gap:18px;border-bottom:1px solid var(--border);background:inherit}
+html,body{margin:0;padding:0;height:100%;min-height:100%;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--ink);background:var(--bg);scrollbar-gutter:stable}
+body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden}
+.container{flex:1 1 auto;display:flex;flex-direction:column;max-width:1200px;width:100%;margin:0 auto;padding:28px 20px 40px;min-height:0}
+.sheet-card{position:relative;background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow1);display:flex;flex-direction:column;min-height:0;flex:1 1 auto;overflow:hidden}
+.sheet-card-header{padding:20px 20px 18px;display:flex;flex-direction:column;gap:18px;border-bottom:1px solid var(--border);background:inherit;flex:0 0 auto}
 .sheet-card-body{flex:1 1 auto;display:flex;flex-direction:column;gap:16px;padding:20px;background:inherit;min-height:0}
-.log-window{flex:1 1 auto;display:flex;flex-direction:column;position:relative;border-radius:calc(var(--radius) - 8px);border:1px solid rgba(148,163,184,.3);background:linear-gradient(145deg,#f5f7fb,#e4e9f5);box-shadow:inset 0 2px 6px rgba(255,255,255,.6),inset 0 -12px 24px rgba(15,23,42,.08);overflow:hidden}
+.log-window{flex:1 1 auto;display:flex;flex-direction:column;position:relative;border-radius:calc(var(--radius) - 8px);border:1px solid rgba(148,163,184,.3);background:linear-gradient(145deg,#f5f7fb,#e4e9f5);box-shadow:inset 0 2px 6px rgba(255,255,255,.6),inset 0 -12px 24px rgba(15,23,42,.08);overflow:hidden;min-height:0}
 .log-window::before{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:inset 0 0 0 1px rgba(255,255,255,.5)}
 .log-list{flex:1 1 auto;display:flex;flex-direction:column;overflow:auto;scrollbar-gutter:stable;padding:12px;margin:0;gap:12px}
 .log-list::after{content:"";flex:0 0 4px}
 .log-window>.empty{padding:48px 24px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:14px;color:var(--muted)}
 @media (max-width:768px){
-  .sheet-card{max-height:none;min-height:0}
-  .sheet-card-body{padding:16px}
-  .log-window{border-radius:12px}
-  .log-list{padding:10px;gap:10px}
+  body{background:#fff}
+  .container{padding:0 0 20px}
+  .sheet-card{border:none;border-radius:0;box-shadow:none;background:#fff}
+  .sheet-card-header{padding:20px 16px 18px;border-bottom:1px solid rgba(148,163,184,.2)}
+  .sheet-card-body{padding:0 16px 16px}
+  .log-window{border-radius:0;border:none;background:#fff;box-shadow:none}
+  .log-list{padding:12px 0;gap:10px}
 }
 .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
 .avatar{display:block;width:auto;height:72px;max-width:100%;border-radius:0;box-shadow:none;object-fit:contain}
@@ -152,8 +156,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card:hover{transform:translateY(-2px);--card-shadow:0 18px 36px rgba(15,23,42,.12)}
 .log-list .card.open{--row-bg:rgba(26,115,232,.12);--card-shadow:0 22px 40px rgba(26,115,232,.18)}
 .log-list .card.editing{--row-bg:rgba(232,240,255,.85);--card-shadow:0 22px 40px rgba(26,115,232,.22);transform:none}
-.log-list .card .card-hd{padding:20px 24px;display:flex;flex-direction:row;align-items:flex-start;gap:16px}
-.log-list .card.activity .card-hd{padding:16px 20px}
+.log-list .card .card-hd{padding:16px 20px;display:flex;flex-direction:row;align-items:center;gap:16px}
 .log-list .card-bd{border-top:1px solid rgba(148,163,184,.28);padding:0 24px;background:transparent}
 .log-list .card .bd-in{padding:18px 0 24px}
 .log-list .card .edit-form{padding:18px 0 24px}
@@ -164,9 +167,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   40%{box-shadow:0 8px 24px rgba(26,115,232,.25),0 0 0 6px rgba(26,115,232,.3)}
   100%{box-shadow:var(--shadow1)}
 }
-.card-hd{display:flex;align-items:flex-start;justify-content:flex-start;flex-wrap:wrap;gap:14px;padding:18px 20px;cursor:pointer;min-height:0}
-.card-hd .titleLine,.card-hd .activity-line{flex:1 1 auto;min-width:0}
-.card-hd .titleLine{width:100%;display:flex;flex-direction:column;gap:6px}
+.card-hd{display:flex;align-items:center;justify-content:flex-start;gap:14px;padding:16px 20px;cursor:pointer;min-height:0}
 .card-hd .card-tools{display:flex;align-items:flex-start;gap:6px;margin-left:auto;flex-wrap:wrap}
 .card .card-tools .icon-btn{opacity:0;visibility:hidden;pointer-events:none;transform:translateY(-4px);transition:opacity var(--dur) var(--ease),transform var(--dur) var(--ease)}
 .card:hover .card-tools .icon-btn,
@@ -175,17 +176,35 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .card .card-tools .icon-btn:focus-visible{opacity:1;visibility:visible;pointer-events:auto;transform:translateY(0)}
 .card.editing .card-hd{cursor:default}
 .card.editing{border-color:rgba(26,115,232,.35);box-shadow:var(--card-shadow,0 0 0 2px rgba(26,115,232,.08));background:var(--row-bg,#e8f0ff)}
+.log-row{display:flex;align-items:center;gap:16px;width:100%;flex:1 1 auto}
+.log-row-info{display:flex;align-items:center;gap:12px;flex:1 1 auto;min-width:0}
+.log-row-date{color:var(--muted);font-size:13px;line-height:1.35;white-space:nowrap;flex:0 0 auto}
+.log-row-date .display{white-space:nowrap}
+.log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden}
+.log-row-title .display{display:inline-block;min-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:clamp(16px,2vw,19px);--scroll-distance:0px}
+.log-row-title.is-adventure .display{font-weight:700}
+.log-row-title.is-activity .display{font-weight:600}
+.log-row-title.scrollable:hover .display{animation:log-row-scroll 6s ease-in-out alternate forwards}
+@media (prefers-reduced-motion:reduce){
+  .log-row-title.scrollable:hover .display{animation:none}
+}
+.chips{display:flex;gap:6px;flex-wrap:wrap;margin-top:0;min-height:0}
+.log-row-chips{margin-left:auto;justify-content:flex-end;flex-wrap:wrap;gap:8px}
+.log-row-chips:empty{display:none}
+.pill{background:#fff7e6;color:#a05a00;border:1px solid #ffe3b0;border-radius:999px;padding:4px 8px;font-weight:700;font-size:11px}
+@keyframes log-row-scroll{
+  0%{transform:translateX(0)}
+  100%{transform:translateX(calc(-1 * var(--scroll-distance)))}
+}
 .titleLine{display:flex;flex-direction:column;gap:6px}
 .date{color:var(--muted);font-size:13px;line-height:1.35}
-.title{font-weight:700;font-size:clamp(16px,2vw,19px);line-height:1.35;height:auto;overflow:visible;white-space:normal;word-break:break-word}
+.title{font-weight:700;font-size:clamp(16px,2vw,19px);line-height:1.35;white-space:normal;word-break:break-word}
 .subtitle{color:var(--muted);font-size:13px;line-height:1.4;min-height:0;white-space:normal}
-.chips{display:flex;gap:6px;flex-wrap:wrap;margin-top:8px;min-height:0}
 .subtitle-row{display:flex;align-items:flex-start;flex-wrap:wrap;gap:8px;margin-top:8px;width:100%;min-height:0}
 .subtitle-row .subtitle{margin-top:0}
 .subtitle-row .chips{margin-top:0;margin-left:0;justify-content:flex-start}
 .card.open .subtitle-row{flex-wrap:wrap;gap:8px}
 .card.open .subtitle-row .chips{margin-left:0;justify-content:flex-start}
-.pill{background:#fff7e6;color:#a05a00;border:1px solid #ffe3b0;border-radius:999px;padding:4px 8px;font-weight:700;font-size:11px}
 
 /* Collapsible */
 .card-bd{height:0;overflow:hidden;border-top:1px solid var(--border);transition:height var(--card-dur,var(--dur)) var(--ease),opacity var(--card-dur,var(--dur)) linear;padding:0 14px;opacity:0;will-change:height,opacity;contain:layout paint}
@@ -304,14 +323,6 @@ body.modal-open #addCardMenu{display:none;}
 .fab-menu button:hover,.fab-menu button:focus{background:#eef4ff;color:var(--primary);outline:none}
 
 /* Activity cards (compact header) */
-.card.activity{background:transparent;border-color:transparent}
-.card.activity .card-hd{padding:16px 20px;min-height:0;display:flex;align-items:flex-start}
-.activity-line{display:flex;align-items:flex-start;justify-content:flex-start;flex-wrap:wrap;width:100%;gap:8px}
-.activity-left{display:flex;align-items:flex-start;gap:8px;min-width:0;flex:1 1 auto;flex-wrap:wrap;white-space:normal}
-.activity-date{font-size:13px;line-height:1.35;color:var(--muted);flex:0 0 auto}
-.activity-name{font-weight:600;font-size:15px;line-height:1.4;white-space:normal;word-break:break-word;flex:1 1 200px;min-width:0}
-.card.activity .chips{display:flex;flex:1 1 100%;align-items:center;gap:6px;margin:0;white-space:normal;justify-content:flex-start}
-.card.activity .pill{height:auto;line-height:1.4;padding:4px 10px;max-width:none;overflow:visible;white-space:normal}
 .pill.muted{background:#eef1f6;color:#475569;border-color:#dce2ee}
 
 /* Modals (shared) */
@@ -3731,57 +3742,62 @@ function makeCard(a,idx){
   const hasLockedKind=!!lockedKind;
 
   const hd=document.createElement('div'); hd.className='card-hd';
-  const main=document.createElement('div');
+  const main=document.createElement('div'); main.className='log-row';
+  const info=document.createElement('div'); info.className='log-row-info';
   let titleEditorSlot=null, titleDisplayEl=null;
   let dateEditorSlot=null, dateDisplayEl=null;
   let codeEditorSlot=null, codeDisplayEl=null;
   let codeFieldView=null;
+
+  const dateSpan=document.createElement('span'); dateSpan.className='log-row-date editable-inline';
+  const dateDisplay=document.createElement('span'); dateDisplay.className='display'; dateDisplay.textContent=fmtDate(a.date);
+  const dateEditor=document.createElement('span'); dateEditor.className='editor';
+  dateSpan.append(dateDisplay,dateEditor); dateSpan.__display=dateDisplay; dateSpan.__editor=dateEditor;
+  dateEditorSlot=dateEditor; dateDisplayEl=dateDisplay;
+
+  const nameSpan=document.createElement('span'); nameSpan.className='log-row-title editable-inline '+(act?'is-activity':'is-adventure');
+  const nameDisplay=document.createElement('span'); nameDisplay.className='display';
+  nameDisplay.textContent=sanitizeTitle((a.title&&a.title.trim())||(act?'Activity':'Untitled Adventure'));
+  const nameEditor=document.createElement('span'); nameEditor.className='editor';
+  nameSpan.append(nameDisplay,nameEditor); nameSpan.__display=nameDisplay; nameSpan.__editor=nameEditor;
+  titleEditorSlot=nameEditor; titleDisplayEl=nameDisplay;
+
+  info.appendChild(dateSpan);
+  info.appendChild(nameSpan);
+  main.appendChild(info);
+
+  const chips=document.createElement('div'); chips.className='chips log-row-chips';
   if(act){
-    main.className='activity-line';
-    const left=document.createElement('div'); left.className='activity-left';
-    const dateSpan=document.createElement('span'); dateSpan.className='activity-date editable-inline';
-    const actDateDisplay=document.createElement('span'); actDateDisplay.className='display'; actDateDisplay.textContent=fmtDate(a.date);
-    const actDateEditor=document.createElement('span'); actDateEditor.className='editor';
-    dateSpan.append(actDateDisplay,actDateEditor); dateSpan.__display=actDateDisplay; dateSpan.__editor=actDateEditor;
-    dateEditorSlot=actDateEditor; dateDisplayEl=actDateDisplay;
-    const nameSpan=document.createElement('span'); nameSpan.className='activity-name editable-inline';
-    const actNameDisplay=document.createElement('span'); actNameDisplay.className='display'; actNameDisplay.textContent=sanitizeTitle(a.title||'Activity');
-    const actNameEditor=document.createElement('span'); actNameEditor.className='editor';
-    nameSpan.append(actNameDisplay,actNameEditor); nameSpan.__display=actNameDisplay; nameSpan.__editor=actNameEditor;
-    titleEditorSlot=actNameEditor; titleDisplayEl=actNameDisplay;
-    left.appendChild(dateSpan); left.appendChild(nameSpan);
-    const chips=document.createElement('div'); chips.className='chips';
     if(gp){ const p=pill('GP '+fmtSigned(gp)); p.classList.add('muted'); chips.appendChild(p); }
     if(dtd){ const p=pill('DTD '+fmtSigned(dtd)); p.classList.add('muted'); chips.appendChild(p); }
-    main.appendChild(left); main.appendChild(chips);
   }else{
-    main.className='titleLine';
-    const dateDiv=document.createElement('div'); dateDiv.className='date editable-inline';
-    const dateDisplay=document.createElement('span'); dateDisplay.className='display'; dateDisplay.textContent=fmtDate(a.date);
-    const dateEditor=document.createElement('span'); dateEditor.className='editor';
-    dateDiv.append(dateDisplay,dateEditor); dateDiv.__display=dateDisplay; dateDiv.__editor=dateEditor;
-    dateEditorSlot=dateEditor; dateDisplayEl=dateDisplay;
-    const titleDiv=document.createElement('div'); titleDiv.className='title editable-inline';
-    const titleDisplay=document.createElement('span'); titleDisplay.className='display'; titleDisplay.textContent=sanitizeTitle(a.title||'Untitled Adventure');
-    const titleEditor=document.createElement('span'); titleEditor.className='editor';
-    titleDiv.append(titleDisplay,titleEditor); titleDiv.__display=titleDisplay; titleDiv.__editor=titleEditor;
-    titleEditorSlot=titleEditor; titleDisplayEl=titleDisplay;
-    const subtitleDiv=document.createElement('div'); subtitleDiv.className='subtitle editable-inline';
-    const subtitleDisplay=document.createElement('span'); subtitleDisplay.className='display'; subtitleDisplay.textContent=a.code||'';
-    const subtitleEditor=document.createElement('span'); subtitleEditor.className='editor';
-    subtitleDiv.append(subtitleDisplay,subtitleEditor); subtitleDiv.__display=subtitleDisplay; subtitleDiv.__editor=subtitleEditor;
-    codeEditorSlot=subtitleEditor; codeDisplayEl=subtitleDisplay;
-    const chips=document.createElement('div'); chips.className='chips';
     const netGP=(a.gp_net==null?gp:a.gp_net);
     chips.appendChild(pill('GP '+fmtSigned(Number(netGP))));
-    const subtitleRow=document.createElement('div'); subtitleRow.className='subtitle-row';
-    subtitleRow.appendChild(subtitleDiv);
-    subtitleRow.appendChild(chips);
-    main.appendChild(dateDiv);
-    main.appendChild(titleDiv);
-    main.appendChild(subtitleRow);
   }
+  main.appendChild(chips);
   hd.appendChild(main);
+
+  const refreshScrollState=(wrapper)=>{
+    if(!wrapper||!wrapper.__display) return;
+    const displayEl=wrapper.__display;
+    const distance=Math.max(0,displayEl.scrollWidth-displayEl.clientWidth);
+    if(distance>1){
+      displayEl.style.setProperty('--scroll-distance', distance+'px');
+      wrapper.classList.add('scrollable');
+    }else{
+      displayEl.style.removeProperty('--scroll-distance');
+      wrapper.classList.remove('scrollable');
+    }
+  };
+  const bindScrollObserver=(wrapper)=>{
+    if(!wrapper) return;
+    const trigger=()=>refreshScrollState(wrapper);
+    wrapper.addEventListener('pointerenter',trigger);
+    wrapper.addEventListener('pointerdown',trigger);
+    wrapper.addEventListener('focus',trigger);
+  };
+  bindScrollObserver(nameSpan);
+  requestAnimationFrame(()=>refreshScrollState(nameSpan));
 
   const tools=document.createElement('div'); tools.className='card-tools';
   const dmLinkMeta=DM_REWARD_LINKS && DM_REWARD_LINKS.get(a);
