--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden}
 .sheet-card-body{flex:1 1 auto;display:flex;flex-direction:column;gap:16px;padding:20px;background:inherit;min-height:0}
 .log-window{flex:1 1 auto;display:flex;flex-direction:column;position:relative;border-radius:calc(var(--radius) - 8px);border:1px solid rgba(148,163,184,.3);background:linear-gradient(145deg,#f5f7fb,#e4e9f5);box-shadow:inset 0 2px 6px rgba(255,255,255,.6),inset 0 -12px 24px rgba(15,23,42,.08);overflow:hidden;min-height:0}
 .log-window::before{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:inset 0 0 0 1px rgba(255,255,255,.5)}
-.log-list{flex:1 1 auto;display:flex;flex-direction:column;overflow:auto;scrollbar-gutter:stable;padding:12px;margin:0;gap:12px}
-.log-list::after{content:"";flex:0 0 4px}
+.log-list{flex:1 1 auto;display:grid;grid-auto-rows:minmax(0,auto);align-content:start;overflow:auto;scrollbar-gutter:stable;padding:12px;margin:0;gap:12px;min-height:0}
+.log-list::after{content:none}
 .log-window>.empty{padding:48px 24px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:14px;color:var(--muted)}
 @media (max-width:768px){
   body{background:#fff}
@@ -148,17 +148,16 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 /* Card */
 .card{display:block;background:#fff;border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow1);overflow:hidden;transition:transform var(--dur) var(--ease),box-shadow var(--dur) var(--ease),background var(--dur) var(--ease)}
 .card:hover{transform:translateY(-3px);box-shadow:var(--shadow2)}
-.log-list .card{position:relative;margin:0;background:var(--row-bg,#fff);border-radius:18px;border:none;box-shadow:var(--card-shadow,0 12px 24px rgba(15,23,42,.08));overflow:hidden;transition:transform var(--dur) var(--ease),box-shadow var(--dur) var(--ease),background var(--dur) var(--ease)}
-.log-list .card::before{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:inset 0 0 0 1px rgba(148,163,184,.25)}
+.log-list .card{position:relative;margin:0;background:var(--row-bg,rgba(255,255,255,.96));border-radius:14px;border:1px solid rgba(148,163,184,.4);box-shadow:none;overflow:hidden;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease),transform var(--dur) var(--ease)}
+.log-list .card::before{display:none}
 .log-list .card>*{position:relative;z-index:1}
-.log-list .card:nth-child(odd){--row-bg:rgba(255,255,255,.9)}
-.log-list .card:nth-child(even){--row-bg:rgba(243,246,251,.92)}
-.log-list .card:hover{transform:translateY(-2px);--card-shadow:0 18px 36px rgba(15,23,42,.12)}
-.log-list .card.open{--row-bg:rgba(26,115,232,.12);--card-shadow:0 22px 40px rgba(26,115,232,.18)}
-.log-list .card.editing{--row-bg:rgba(232,240,255,.85);--card-shadow:0 22px 40px rgba(26,115,232,.22);transform:none}
-.log-list .card .card-hd{padding:16px 20px;display:flex;flex-direction:row;align-items:center;gap:16px}
-.log-list .card-bd{border-top:1px solid rgba(148,163,184,.28);padding:0 24px;background:transparent}
-.log-list .card .bd-in{padding:18px 0 24px}
+.log-list .card:hover{transform:translateY(-1px);box-shadow:0 12px 24px rgba(15,23,42,.12);border-color:rgba(148,163,184,.6)}
+.log-list .card.open{--row-bg:rgba(26,115,232,.08);border-color:rgba(26,115,232,.4);box-shadow:0 16px 32px rgba(26,115,232,.16)}
+.log-list .card.editing{--row-bg:rgba(232,240,255,.85);border-color:rgba(26,115,232,.45);box-shadow:0 18px 36px rgba(26,115,232,.18);transform:none}
+.log-list .card .card-hd{padding:14px 16px;display:grid;grid-template-columns:minmax(0,1fr) auto;align-items:center;gap:12px;min-height:64px}
+.log-list .card .card-hd .card-tools{justify-self:end;align-items:center;gap:6px}
+.log-list .card-bd{border-top:1px solid rgba(148,163,184,.28);padding:0 16px;background:linear-gradient(180deg,rgba(248,250,252,.9),rgba(241,245,249,.85))}
+.log-list .card .bd-in{padding:16px 0 20px}
 .log-list .card .edit-form{padding:18px 0 24px}
 .card:focus-visible{outline:2px solid rgba(26,115,232,.45);outline-offset:4px}
 .card.focus-glow{animation:card-focus-glow 1300ms ease-out}
@@ -176,12 +175,12 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .card .card-tools .icon-btn:focus-visible{opacity:1;visibility:visible;pointer-events:auto;transform:translateY(0)}
 .card.editing .card-hd{cursor:default}
 .card.editing{border-color:rgba(26,115,232,.35);box-shadow:var(--card-shadow,0 0 0 2px rgba(26,115,232,.08));background:var(--row-bg,#e8f0ff)}
-.log-row{display:flex;align-items:center;gap:16px;width:100%;flex:1 1 auto}
-.log-row-info{display:flex;align-items:center;gap:12px;flex:1 1 auto;min-width:0}
+.log-row{display:grid;grid-template-columns:minmax(0,1fr) auto;align-items:center;gap:12px;width:100%;min-height:0}
+.log-row-info{display:grid;grid-template-columns:auto minmax(0,1fr);align-items:center;gap:12px;min-width:0}
 .log-row-date{color:var(--muted);font-size:13px;line-height:1.35;white-space:nowrap;flex:0 0 auto}
 .log-row-date .display{white-space:nowrap}
-.log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden}
-.log-row-title .display{display:inline-block;min-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:clamp(16px,2vw,19px);--scroll-distance:0px}
+.log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden;display:flex;align-items:center}
+.log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:clamp(16px,2vw,19px);--scroll-distance:0px}
 .log-row-title.is-adventure .display{font-weight:700}
 .log-row-title.is-activity .display{font-weight:600}
 .log-row-title.scrollable:hover .display{animation:log-row-scroll 6s ease-in-out alternate forwards}
@@ -189,7 +188,8 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   .log-row-title.scrollable:hover .display{animation:none}
 }
 .chips{display:flex;gap:6px;flex-wrap:wrap;margin-top:0;min-height:0}
-.log-row-chips{margin-left:auto;justify-content:flex-end;flex-wrap:wrap;gap:8px}
+.log-row-chips{margin-left:auto;justify-content:flex-end;flex-wrap:nowrap;gap:8px;align-items:center;overflow:hidden;padding-left:8px}
+.log-row-chips .pill{white-space:nowrap}
 .log-row-chips:empty{display:none}
 .pill{background:#fff7e6;color:#a05a00;border:1px solid #ffe3b0;border-radius:999px;padding:4px 8px;font-weight:700;font-size:11px}
 @keyframes log-row-scroll{
