--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .title-select-wrap{display:flex;align-items:center;gap:6px;position:relative;max-width:100%;min-width:0}
 .title-select-wrap::after{content:"";flex-shrink:0;width:12px;height:8px;clip-path:polygon(0 0,100% 0,50% 100%);background:currentColor;opacity:.55;transition:opacity var(--dur) var(--ease),transform var(--dur) var(--ease);pointer-events:none;transform:translateY(0)}
 .title-select-wrap:focus-within::after{opacity:1;transform:translateY(-2px)}
-.title-select{appearance:none;border:none;background:transparent;font:inherit;color:var(--ink);padding:0;margin:0;cursor:pointer;line-height:1.1;font-weight:500;letter-spacing:-0.01em;max-width:100%;min-width:0;font-size:12px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+.title-select{appearance:none;border:none;background:transparent;font:inherit;color:var(--ink);padding:0;margin:0;cursor:pointer;line-height:1.1;font-weight:500;letter-spacing:-0.01em;max-width:100%;min-width:0;font-size:16px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .title-select:focus-visible{outline:2px solid rgba(26,115,232,.35);outline-offset:2px;border-radius:6px}
 .title-select option{color:var(--ink)}
 .char-badges{margin-top:4px;display:none;gap:8px;flex-wrap:wrap;align-items:center}
@@ -198,7 +198,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 }
 .titleLine{display:flex;flex-direction:column;gap:6px}
 .date{color:var(--muted);font-size:13px;line-height:1.35}
-.title{font-weight:700;font-size:clamp(16px,2vw,19px);line-height:1.35;white-space:normal;word-break:break-word}
+.title{font-weight:400;font-size:12px;line-height:1.35;white-space:normal;word-break:break-word}
 .subtitle{color:var(--muted);font-size:13px;line-height:1.4;min-height:0;white-space:normal}
 .subtitle-row{display:flex;align-items:flex-start;flex-wrap:wrap;gap:8px;margin-top:8px;width:100%;min-height:0}
 .subtitle-row .subtitle{margin-top:0}
